--- a/src/Components/UserUIComponents/HistoryPage.module.css
+++ b/src/Components/UserUIComponents/HistoryPage.module.css
@@ -3,7 +3,7 @@
   border-radius: 0.5rem;
   margin-bottom: 2rem;
   border: 0.1rem solid rgb(211, 211, 211);
-  height: 60vh;
+  min-height: 60vh;
   max-height: 60vh;
   overflow-y: scroll;
   scrollbar-width: 0;
@@ -27,7 +27,7 @@
   margin: auto;
   display: flex;
   align-items: center;
-  height: 5rem;
+  height: 4rem;
   margin-bottom: 0.5rem;
   margin-top: 0.5rem;
 }
@@ -37,11 +37,16 @@
 }
 .liBox h4,
 h3 {
+  text-transform: capitalize;
+  font-size: 0.9rem;
   margin: 0.2rem;
   font-family: "poppins";
   font-weight: 400;
 }
 
+.liBox h4 {
+  font-size: 0.7rem;
+}
 .info_right {
   width: 30%;
   text-align: right;
@@ -57,10 +62,13 @@ h3 {
   margin-left: auto;
   font-family: "poppins";
   font-size: 0.9rem;
+  width: 3rem;
 }
 .cleartick {
   color: #1db954;
   margin-right: 0.5rem;
+  transform: scale(0.8);
+  margin: auto;
 }
 
 .pending {
