--- a/src/Components/AdditionalComponents/GeneralButton.module.css
+++ b/src/Components/AdditionalComponents/GeneralButton.module.css
@@ -2,7 +2,8 @@
   border: none;
   width: 100%;
   min-width: 10rem;
-  height: 2.8rem;
+  height: 100%;
+  min-height: 2.9rem;
   margin: auto;
   margin-top: 0.5rem;
   font-size: 0.9rem;
@@ -42,7 +43,10 @@
   display: inline;
   position: absolute;
   left: 70%;
-  top: 51%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  height: 1vh;
+  width: 2%;
 }
 .btnParent {
   display: flex;
@@ -60,9 +64,11 @@
   }
   .notificationBall_2 {
     left: 75%;
-    top: 50%;
+    top: 57%;
     padding: 0.15rem 0.15rem;
     font-size: 0.5rem;
+    height: 0.1rem;
+    width: 0.1rem;
   }
 }
 
@@ -72,5 +78,14 @@
     height: 2.9rem;
     width: 13rem;
     font-size: 0.9rem;
+  }
+  .notificationBall_2 {
+    left: 10%;
+    top: 51%;
+
+    padding: 0.15rem 0.15rem;
+    font-size: 0.5rem;
+    height: 0.1rem;
+    width: 0.1rem;
   }
 }
