--- a/src/Components/UserUIComponents/MCScorePage.module.css
+++ b/src/Components/UserUIComponents/MCScorePage.module.css
@@ -54,6 +54,7 @@
   margin-top: 1rem;
   border-top: 0.1rem solid rgb(211, 211, 211);
   padding-top: 1rem;
+  text-align: left;
 }
 
 /* Responsive styling from here. */
