--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,42 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* TOASTIFY SETTINGS */
+  --toastify-color-light: #ffffff; /* Light theme background */
+  --toastify-color-dark: #282828; /* Dark theme background */
+  --toastify-color-info: #29b6f6;
+  --toastify-color-success: #66bb6a;
+  --toastify-color-warning: #ffa726;
+  --toastify-color-error: #ef5350;
+
+  --toastify-text-color-light: #333;
+  --toastify-text-color-dark: #f0f0f0;
+
+  --toastify-icon-color-info: var(--toastify-color-info);
+  --toastify-icon-color-success: var(--toastify-color-success);
+  --toastify-icon-color-warning: var(--toastify-color-warning);
+  --toastify-icon-color-error: var(--toastify-color-error);
+
+  --toastify-toast-width: 20rem;
+  --toastify-toast-background: var(--toastify-color-light);
+  --toastify-toast-min-height: 3rem;
+  --toastify-toast-padding: 16px;
+  --toastify-toast-border-radius: 0.5rem;
+  --toastify-toast-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  --toastify-font-family: sans-serif;
+  --toastify-z-index: 9999; /* Adjust if needed */
+
+  /* Progress Bar */
+  --toastify-progress-bar-color-light: var(--toastify-color-light);
+  --toastify-progress-bar-color-dark: #fff;
+  --toastify-progress-bar-height: 2rem;
+
+  /* Close Button */
+  --toastify-close-button-color-light: #aaa;
+  --toastify-close-button-color-dark: #eee;
+  --toastify-close-button-hover-color-light: #333;
+  --toastify-close-button-hover-color-dark: #fff;
 }
 
 body {
@@ -21,6 +57,19 @@ body {
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
+/*  
+bar color 
+ linear-gradient(
+    to right,
+    #4cd964,
+    #5ac8fa,
+    #007aff,
+    #34aadc,
+    #5856d6,
+    #ff2d55
+  );
+    
+    */
 body::-webkit-scrollbar {
   width: 0.5rem;
   scroll-behavior: smooth;
@@ -34,19 +83,19 @@ body::-webkit-scrollbar-thumb {
   background-color: green;
 }
 
-.Toastify__toast--warning {
-  background: #ffe8bc !important;
+.my-toast-container {
+  border-radius: 8px;
+  box-shadow: 2px 2px 10px rgba(235, 10, 10, 0.2);
 }
-.Toastify__toast--error {
-  background: #fca7a9 !important;
+
+.my-toast-body {
+  font-size: 16px;
+  font-weight: bold;
 }
-.toastBody {
-  font-family: "Atlas Grotesk Web", Arial, Helvetica, sans-serif;
-  color: #10171d; /* #10171D */
-  font-size: 0.875rem !important;
-}
-.toastProgress {
-  background: #333f48 !important;
+
+.my-progress-bar {
+  background-color: rgb(255, 0, 0) !important;
+  height: 5px;
 }
 @media only screen and (min-width: 280px) and (max-width: 576px) {
   body {
