--- a/src/Components/AdditionalComponents/WhenNoItemToDisplay.module.css
+++ b/src/Components/AdditionalComponents/WhenNoItemToDisplay.module.css
@@ -1,21 +1,24 @@
 .noReqsBox {
   min-height: 20rem;
   max-height: auto;
-  width: 70%;
+  width: 80%;
   border: 0.1rem solid rgb(211, 211, 211);
   padding: 1rem;
   border-radius: 0.5rem;
-  margin: 3rem 0rem;
+  margin: auto;
+  margin-top: 3rem;
   text-align: center;
 }
 .noReqsBox h2,
 p {
-  color: #191414;
+  color: #404040;
+
+  font-family: "poppins";
 }
 .faceIcn {
   transform: scale(4.2);
   margin: 4rem;
-  color: #191414;
+  color: #404040;
 }
 .homeBtn {
   margin-top: 2rem;
