--- a/src/Components/TopLevel/Footer.module.css
+++ b/src/Components/TopLevel/Footer.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-family: poppins;
+  font-family: "poppins";
   width: 100%;
   padding: 0rem 1rem;
 }
@@ -37,7 +37,8 @@
   border-top-right-radius: 1rem;
   border-top-left-radius: 1rem;
   padding-top: 1rem;
-  margin-top: 2rem;
+  /* margin-top: 2rem; */
+  margin-top: auto;
 }
 .socialLinksPart {
   display: flex;
