--- a/src/index.css
+++ b/src/index.css
@@ -53,9 +53,11 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   margin: 0;
   padding: 0% 15%;
-  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   scroll-behavior: smooth;
   overflow-x: hidden;
+  min-height: 100vh;
 }
 
 body::-webkit-scrollbar {
