--- a/src/Components/SignupAndAuthentication/LoginPage.module.css
+++ b/src/Components/SignupAndAuthentication/LoginPage.module.css
@@ -34,20 +34,21 @@
   align-items: center;
   justify-content: center;
   margin: 1rem 0rem;
+  margin-top: 5rem;
 }
 .quickinImg {
   height: 1.7rem;
   margin-left: 0.5rem;
 }
 .parentGrid {
-  height: 70vh;
+  height: 75vh;
 }
-.spinnerBox {
+/* .spinnerBox {
   height: 60vh;
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} */
 /* Responsive styling from here. */
 @media only screen and (min-width: 280px) and (max-width: 576px) {
   .quickinText {
