--- a/src/Components/AdditionalComponents/DetailDebtNote.module.css
+++ b/src/Components/AdditionalComponents/DetailDebtNote.module.css
@@ -39,7 +39,11 @@
   padding: 2rem;
   width: 100%;
 }
-
+.bottom_line {
+  width: 80%;
+  margin: auto;
+  margin-top: 1.2rem;
+}
 .row {
   height: 3rem;
   margin-top: 2rem;
