--- a/src/Components/AdditionalComponents/DetailDebtNote.module.css
+++ b/src/Components/AdditionalComponents/DetailDebtNote.module.css
@@ -38,6 +38,7 @@
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
   padding: 2rem;
   width: 100%;
+  border: 0.1rem solid rgb(221, 221, 221);
 }
 .bottom_line {
   width: 80%;
