--- a/src/Components/AdditionalComponents/DetailDebtNote.module.css
+++ b/src/Components/AdditionalComponents/DetailDebtNote.module.css
@@ -22,15 +22,16 @@
   text-decoration: underline;
 }
 .btnContainer {
-  width: 80%;
+  width: 60%;
   border: 0.1rem solid rgb(221, 221, 221);
   border-radius: 1rem;
   display: flex;
   align-items: center;
   justify-content: center;
+
   padding: 0.5rem;
   margin: auto;
-  margin-top: 0.3rem;
+  margin-top: 1rem;
 }
 .parentContainer {
   border-radius: 1rem;
@@ -56,16 +57,17 @@
   font-size: 1rem;
   font-weight: 400;
   margin-left: 1rem;
-  border: 0.1rem solid rgb(221, 221, 221);
-  border-radius: 0.5rem;
+  border: none;
+  border-radius: 0.2rem;
+  border-bottom: 0.1rem solid rgb(221, 221, 221);
   padding: 0.5rem 1rem;
   border-spacing: 3rem;
 }
 
 .btnContainer button {
-  width: 11rem;
+  width: 10rem;
+
   height: 2rem;
-  margin-left: 1rem;
   border-radius: 0.5rem;
   outline: none;
   border: none;
@@ -84,6 +86,7 @@
 
 .btnContainer :nth-child(2) {
   background-color: #1db954;
+  margin-left: 0.5rem;
 }
 
 .lnkbtn {
@@ -98,6 +101,7 @@
 }
 .del {
   background-color: rgb(241, 51, 51);
+  margin-right: 0.5rem;
 }
 .del:active {
   background-color: rgb(182, 28, 28);
