--- a/src/Components/AdditionalComponents/DetailDebtNote.module.css
+++ b/src/Components/AdditionalComponents/DetailDebtNote.module.css
@@ -44,7 +44,8 @@
 .bottom_line {
   width: 80%;
   margin: auto;
-  margin-top: 1.2rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 .row {
   height: 3rem;
