--- a/src/Components/AdditionalComponents/GeneralButton.module.css
+++ b/src/Components/AdditionalComponents/GeneralButton.module.css
@@ -9,10 +9,10 @@
   font-size: 0.9rem;
   font-family: "poppins";
   display: flex;
+  align-items: center;
   justify-content: center;
   border-left: 0rem;
   border-right: 0rem;
-  align-items: center;
   background-color: transparent;
   color: #2a2a2a;
   background-color: #efefef;
@@ -26,7 +26,7 @@
 .icn {
   margin-right: 0.2rem;
 }
-.notificationBall_2 {
+/* .notificationBall_2 {
   padding: 0.5rem, 0.5rem;
   font-size: 0.6rem;
   background-color: rgb(252, 67, 67);
@@ -44,7 +44,7 @@
   max-width: 1.2%;
   min-height: 0.3rem;
   min-width: 1.2%;
-}
+} */
 .btnParent {
   display: flex;
   align-items: center;
