--- a/src/Components/TopLevel/DebtDetails.module.css
+++ b/src/Components/TopLevel/DebtDetails.module.css
@@ -22,7 +22,7 @@
 .title h3 {
   font-weight: 400;
   font-family: "poppins";
-  margin: 0.5rem 0.5rem;
+  margin: 0.5rem;
 }
 .parentContainer {
   width: 100%;
