--- a/src/Components/TopLevel/DebtNotesContainer.module.css
+++ b/src/Components/TopLevel/DebtNotesContainer.module.css
@@ -11,7 +11,7 @@
 }
 .headingPart {
   width: 100%;
-  padding: 0.5rem 0.5rem;
+  padding: 0.5rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
