--- a/src/Components/AdditionalComponents/FiltersDiv.module.css
+++ b/src/Components/AdditionalComponents/FiltersDiv.module.css
@@ -5,7 +5,7 @@
   margin-top: 0.5rem;
   border-radius: 0.5rem;
   padding: 0.54rem 1rem;
-  background-color: #14863c;
+  background-color: #1db954;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
@@ -21,6 +21,9 @@
 .inpBox button {
   outline: none;
   border: none;
+  height: 1.85rem;
+  width: 1.85rem;
+  text-align: center;
   border-radius: 1rem;
   margin-left: 0.4rem;
   margin-right: 1rem;
@@ -43,6 +46,7 @@
   color: rgb(0, 61, 0);
 }
 .inpBox h4 {
+  color: rgb(229, 229, 229);
   font-family: "poppins";
   font-weight: 400;
   font-size: 0.9rem;
