--- a/src/Components/AdditionalComponents/NewDebtNoteForm.module.css
+++ b/src/Components/AdditionalComponents/NewDebtNoteForm.module.css
@@ -1,2 +1,36 @@
-.header {
+.formBox {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  height: 10rem;
+  padding: 0.5rem;
+  border-radius: 1rem;
+  border: 0.1rem solid rgb(211, 211, 211);
+}
+.parentBox {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+.formBox button {
+  outline: none;
+  border: 0.1rem solid rgb(211, 211, 211);
+}
+.txt_area {
+  resize: none;
+  font-size: 0.8rem;
+  font-family: "poppins";
+  width: 100%;
+  scrollbar-width: none;
+  padding: 1rem;
+  border-radius: 1rem;
+  border: 0.1rem solid rgb(211, 211, 211);
+}
+.txt_area::-webkit-scrollbar {
+  display: none;
+}
+.txt_area:focus {
+  outline: none;
 }
