--- a/src/Components/AdditionalComponents/GeneralButton.module.css
+++ b/src/Components/AdditionalComponents/GeneralButton.module.css
@@ -3,10 +3,10 @@
   width: 100%;
   min-width: 10rem;
   height: 100%;
-  min-height: 2.9rem;
+  min-height: 2.5rem;
   margin: auto;
   margin-top: 0.5rem;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   font-family: "poppins";
   display: flex;
   align-items: center;
@@ -25,6 +25,7 @@
 
 .icn {
   margin-right: 0.2rem;
+  transform: scale(0.9);
 }
 /* .notificationBall_2 {
   padding: 0.5rem, 0.5rem;
@@ -57,7 +58,7 @@
     border: none;
     height: 2.2rem;
     width: 12rem;
-    font-size: 0.8rem;
+    font-size: 0.7rem;
   }
   .notificationBall_2 {
     left: 76%;
@@ -76,7 +77,7 @@
     border: none;
     height: 2.9rem;
     width: 13rem;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
   }
   .notificationBall_2 {
     left: 70%;
