--- a/src/Components/AdditionalComponents/NewDebtNoteForm.module.css
+++ b/src/Components/AdditionalComponents/NewDebtNoteForm.module.css
@@ -5,7 +5,7 @@
 .formBox {
   width: 100%;
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
   justify-content: center;
   text-align: center;
   height: 10rem;
@@ -43,7 +43,6 @@
 .txt_area {
   resize: none;
   font-size: 0.8rem;
-  width: 100%;
   scrollbar-width: none;
   padding: 1rem;
   border: none;
@@ -85,5 +84,35 @@
   }
   .new_note_heading h3 {
     font-size: 0.8rem;
+  }
+}
+@media only screen and (min-width: 280px) and (max-width: 576px) {
+  .formBox button {
+    width: 80%;
+  }
+  .txt_area {
+    width: 90%;
+    padding: 0.5rem;
+    text-align: center;
+  }
+  .formBox :nth-child(2) {
+    width: 90%;
+    padding: 0.5rem;
+    text-align: center;
+  }
+}
+@media only screen and (min-width: 576px) and (max-width: 720px) {
+  .formBox button {
+    width: 80%;
+  }
+  .txt_area {
+    width: 90%;
+    padding: 0.5rem;
+    text-align: center;
+  }
+  .formBox :nth-child(2) {
+    width: 90%;
+    padding: 0.5rem;
+    text-align: center;
   }
 }
