--- a/src/Components/UserUIComponents/HistoryPage.module.css
+++ b/src/Components/UserUIComponents/HistoryPage.module.css
@@ -9,7 +9,7 @@
   scrollbar-width: 0;
 }
 .detailsBox::-webkit-scrollbar {
-  width: 0.5rem;
+  width: 0.3rem;
   scroll-behavior: smooth;
 }
 .detailsBox::-webkit-scrollbar-track {
@@ -22,16 +22,19 @@
 }
 .liBox {
   width: 90%;
+  color: black;
   border: 0.1rem solid rgb(211, 211, 211);
   border-radius: 0.5rem;
   margin: auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 8rem;
+  height: auto;
   flex-wrap: wrap;
   margin-bottom: 0.5rem;
   margin-top: 0.5rem;
+  padding-bottom: 0.3rem;
+  padding-top: 0.2rem;
 }
 .info_left {
   width: 60%;
@@ -53,9 +56,10 @@ h3 {
   width: 20%;
   text-align: right;
   padding-right: 1rem;
-  border: 0.1rem solid green;
 }
-
+.info_right h3 {
+  font-size: 0.8rem;
+}
 .clearIndicatorBtn {
   border-radius: 0.5rem;
   border: none;
@@ -64,15 +68,15 @@ h3 {
   justify-content: right;
   margin-left: auto;
   font-family: "poppins";
-  font-size: 0.9rem;
+  font-size: 0.7rem;
   width: auto;
   background-color: rgb(245, 245, 245);
-  padding: 0.1rem 1rem;
+  padding: 0rem 1rem;
 }
 .cleartick {
   color: #1db954;
   margin-right: 0.5rem;
-  transform: scale(0.8);
+  transform: scale(0.7);
   margin: auto;
 }
 
@@ -81,7 +85,9 @@ h3 {
   transform: scale(0.7);
   background-color: none;
 }
-
+.subtitle {
+  margin-top: 0.5rem;
+}
 /* Responsive styling from here. */
 @media only screen and (min-width: 280px) and (max-width: 576px) {
   .detailsBox {
