--- a/src/Components/EditAccountComponents/EditAccount.module.css
+++ b/src/Components/EditAccountComponents/EditAccount.module.css
@@ -18,6 +18,12 @@
   color: #404040;
   font-family: "poppins";
   font-weight: 400;
+  text-transform: capitalize;
+}
+.btnBox {
+  width: 50%;
+  margin: auto;
+  margin-top: 1rem;
 }
 /* Responsive styling from here. */
 @media only screen and (min-width: 280px) and (max-width: 576px) {
