--- a/src/Components/AdditionalComponents/AccountInfoPart.module.css
+++ b/src/Components/AdditionalComponents/AccountInfoPart.module.css
@@ -42,6 +42,10 @@
   text-align: center;
   padding-top: 0;
 }
+
+.myReward_btn {
+}
+
 /* Responsive styling from here. */
 @media only screen and (min-width: 280px) and (max-width: 576px) {
   .mainGrid {
