--- a/src/Components/AdditionalComponents/AccountInfoPart.module.css
+++ b/src/Components/AdditionalComponents/AccountInfoPart.module.css
@@ -48,23 +48,29 @@
   outline: none;
   border: none;
   margin: auto;
-  width: 95%;
-  padding: 0.7rem;
+  width: 60%;
+  padding: 0.5rem;
   border-radius: 2rem;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   font-family: "poppins";
   display: flex;
   background-color: #1db954;
   justify-content: center;
+  cursor: pointer;
+}
+.myReward_btn:active {
+  background-color: #189f48;
 }
 .myReward_btn span {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 50%;
+  color: #ffffff;
 }
 .rewardIcon {
-  color: #2a2a2a;
+  color: #ffffff;
+
   margin-right: 0.2rem;
 }
 /* Responsive styling from here. */
