--- a/src/Components/AdditionalComponents/GeneralButton.module.css
+++ b/src/Components/AdditionalComponents/GeneralButton.module.css
@@ -1,18 +1,18 @@
 .btn {
   border: none;
+  border-radius: 0.5rem;
   width: 100%;
   min-width: 10rem;
   height: 100%;
-  min-height: 2.5rem;
+  min-height: 3rem;
   margin: auto;
-  margin-top: 0.5rem;
+  margin-top: 0.3rem;
   font-size: 0.9rem;
   font-family: "poppins";
   display: flex;
   align-items: center;
-  justify-content: center;
-  border-left: 0rem;
-  border-right: 0rem;
+  justify-content: start;
+  padding-left: 1.5rem;
   background-color: transparent;
   color: #2a2a2a;
   background-color: #efefef;
@@ -50,7 +50,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
 }
 /* Responsive styling from here. */
 @media only screen and (min-width: 280px) and (max-width: 576px) {
