--- a/src/Components/AdditionalComponents/GeneralButton.module.css
+++ b/src/Components/AdditionalComponents/GeneralButton.module.css
@@ -11,8 +11,9 @@
   font-family: "poppins";
   display: flex;
   align-items: center;
-  justify-content: start;
+  justify-content: space-between;
   padding-left: 1.5rem;
+  padding-right: 1.5rem;
   background-color: transparent;
   color: #2a2a2a;
   background-color: #efefef;
@@ -22,10 +23,18 @@
 .btn:active {
   background-color: rgb(228, 228, 228);
 }
-
+.btnInfo {
+  display: flex;
+  align-items: center;
+}
 .icn {
   margin-right: 0.2rem;
   transform: scale(0.9);
+}
+.backBtnExtraClass {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 /* .notificationBall_2 {
   padding: 0.5rem, 0.5rem;
