--- a/src/Components/AdditionalComponents/MyRewards.module.css
+++ b/src/Components/AdditionalComponents/MyRewards.module.css
@@ -2,6 +2,7 @@
   font-family: "poppins";
 }
 .subtitleBox {
+  margin-top: 1rem;
   border: 0.1rem solid rgb(211, 211, 211);
   border-radius: 1rem;
   padding: 1.3rem;
@@ -44,7 +45,7 @@
   width: 45vw;
   min-height: 10rem;
   max-height: 70vh;
-  /* border: 0.1rem solid rgb(211, 211, 211); */
+  border: 0.1rem solid rgb(211, 211, 211);
   border-radius: 1rem;
   padding: 1.2rem;
   display: grid;
