--- a/src/Components/AdditionalComponents/MyRewards.module.css
+++ b/src/Components/AdditionalComponents/MyRewards.module.css
@@ -32,8 +32,7 @@
   align-items: center;
 }
 
-.boxRight :nth-child(1),
-.boxRight :nth-child(2) {
+.boxRight :nth-child(1) {
   transform: scale(1);
   width: 10rem;
   margin-left: auto;
@@ -51,8 +50,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto;
-  row-gap: 1rem;
-  column-gap: 1rem;
+  row-gap: 0.2rem;
+  column-gap: 0.2rem;
   margin-bottom: 1rem;
   overflow-y: scroll;
   justify-items: center;
@@ -66,8 +65,8 @@
   padding: 0.7rem;
   border-radius: 1rem;
   width: 12rem;
-  margin-bottom: 1rem;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  margin-bottom: 0.7rem;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 20px;
 }
 .parent_reward_Box h2 {
   font-size: 1.1rem;
@@ -77,4 +76,56 @@
   font-size: 0.9rem;
   margin-top: 0.3rem;
   margin-bottom: 0.3rem;
+}
+.btnBox {
+  width: 12rem;
+  height: 2.5rem;
+}
+.btnBox :nth-child(1) {
+  width: 100%;
+  height: 100%;
+  outline: none;
+  border: none;
+  padding: 0.3rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  transition: 0.2s ease;
+}
+.btnBox :nth-child(1):active {
+  background-color: rgb(200, 200, 200);
+}
+@media only screen and (min-width: 280px) and (max-width: 576px) {
+  .boxLeft h2 {
+    font-size: 1rem;
+  }
+  .boxLeft p {
+    margin-top: 0.2rem;
+    font-size: 0.7rem;
+  }
+  .boxRight {
+    width: 30%;
+    height: 3.5rem;
+  }
+
+  .boxRight :nth-child(1) {
+    height: 3.5rem;
+  }
+  .rewardsBox {
+    width: 95vw;
+    padding: 0.2rem;
+    row-gap: 0.2rem;
+    column-gap: 1rem;
+    grid-template-columns: 1fr 1fr;
+  }
+  .parent_reward_Box {
+    padding: 0.5rem;
+    width: 10rem;
+  }
+  .parent_reward_Box h2 {
+    font-size: 0.9rem;
+  }
+
+  .parent_reward_Box p {
+    font-size: 0.7rem;
+  }
 }
