--- a/src/Components/AdditionalComponents/MyRewards.module.css
+++ b/src/Components/AdditionalComponents/MyRewards.module.css
@@ -34,12 +34,13 @@
 
 .boxRight :nth-child(1) {
   transform: scale(1);
-  width: 10rem;
+  width: 4rem;
   margin-left: auto;
   height: 4.3rem;
 }
 
 .rewardsBox {
+  margin: auto;
   margin-top: 1rem;
   width: 45vw;
   min-height: 10rem;
@@ -91,10 +92,15 @@
   cursor: pointer;
   transition: 0.2s ease;
 }
+
+.btnBox:nth-child(1):hover {
+  background-color: #e5e5e5;
+}
 .btnBox :nth-child(1):active {
   background-color: rgb(200, 200, 200);
 }
-@media only screen and (min-width: 280px) and (max-width: 576px) {
+
+@media only screen and (min-width: 280px) and (max-width: px) {
   .boxLeft h2 {
     font-size: 1rem;
   }
@@ -106,7 +112,9 @@
     width: 30%;
     height: 3.5rem;
   }
-
+  .boxLeft {
+    width: 70%;
+  }
   .boxRight :nth-child(1) {
     height: 3.5rem;
   }
@@ -127,5 +135,23 @@
 
   .parent_reward_Box p {
     font-size: 0.7rem;
+  }
+  .btnBox {
+    width: 12rem;
+    height: 2.5rem;
+  }
+  .btnBox {
+    width: 10rem;
+    height: 2.5rem;
+  }
+  .btnBox :nth-child(1) {
+    width: 100%;
+    height: 100%;
+    outline: none;
+    border: none;
+    padding: 0.3rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    transition: 0.2s ease;
   }
 }
