--- a/src/Components/AdditionalComponents/BasicCoverDiv.module.css
+++ b/src/Components/AdditionalComponents/BasicCoverDiv.module.css
@@ -30,3 +30,8 @@
     font-size: 1.8rem;
   }
 }
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+  .mainGrid {
+    width: 100%;
+  }
+}
