--- a/src/Components/AdditionalComponents/MyRewards.module.css
+++ b/src/Components/AdditionalComponents/MyRewards.module.css
@@ -100,7 +100,7 @@
   background-color: rgb(200, 200, 200);
 }
 
-@media only screen and (min-width: 280px) and (max-width: px) {
+@media only screen and (min-width: 280px) and (max-width: 576px) {
   .boxLeft h2 {
     font-size: 1rem;
   }
@@ -121,13 +121,14 @@
   .rewardsBox {
     width: 95vw;
     padding: 0.2rem;
+    padding-top: 0.5rem;
     row-gap: 0.2rem;
-    column-gap: 1rem;
+    column-gap: 0.1rem;
     grid-template-columns: 1fr 1fr;
   }
   .parent_reward_Box {
-    padding: 0.5rem;
-    width: 10rem;
+    padding: 0.8rem;
+    width: 8rem;
   }
   .parent_reward_Box h2 {
     font-size: 0.9rem;
@@ -136,22 +137,169 @@
   .parent_reward_Box p {
     font-size: 0.7rem;
   }
+
   .btnBox {
-    width: 12rem;
-    height: 2.5rem;
-  }
-  .btnBox {
-    width: 10rem;
-    height: 2.5rem;
+    width: 8rem;
+    height: 2.2rem;
   }
   .btnBox :nth-child(1) {
     width: 100%;
     height: 100%;
-    outline: none;
-    border: none;
+    padding: 0.1rem;
+    font-size: 0.7rem;
+  }
+}
+@media only screen and (min-width: 500px) and (max-width: 576px) {
+  .rewardsBox {
+    width: 95vw;
+    padding: 0.2rem;
+    padding-top: 0.5rem;
+    row-gap: 0.2rem;
+    column-gap: 0.1rem;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 720px) {
+  .boxLeft h2 {
+    font-size: 1.1rem;
+  }
+  .boxLeft p {
+    margin-top: 0.2rem;
+    font-size: 0.8rem;
+  }
+  .boxRight {
+    width: 20%;
+    height: 3.5rem;
+  }
+  .boxLeft {
+    width: 80%;
+  }
+  .boxRight :nth-child(1) {
+    height: 3.5rem;
+  }
+  .rewardsBox {
+    width: 85vw;
     padding: 0.3rem;
-    border-radius: 0.5rem;
-    cursor: pointer;
-    transition: 0.2s ease;
+    padding-top: 0.5rem;
+    row-gap: 0.2rem;
+    column-gap: 0.1rem;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .parent_reward_Box {
+    padding: 0.8rem;
+    width: 8rem;
+  }
+  .parent_reward_Box h2 {
+    font-size: 1rem;
+  }
+
+  .parent_reward_Box p {
+    font-size: 0.7rem;
+  }
+
+  .btnBox {
+    width: 8rem;
+    height: 2.2rem;
+  }
+  .btnBox :nth-child(1) {
+    width: 100%;
+    height: 100%;
+    padding: 0.1rem;
+    font-size: 0.8rem;
+  }
+  .subtitleBox {
+    width: 70vw;
+  }
+}
+
+@media only screen and (min-width: 720px) and (max-width: 992px) {
+  .rewardsBox {
+    width: 85vw;
+    padding: 0.3rem;
+    padding-top: 0.5rem;
+    row-gap: 0.2rem;
+    column-gap: 0.1rem;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .parent_reward_Box {
+    padding: 0.8rem;
+    width: 11rem;
+  }
+  .parent_reward_Box h2 {
+    font-size: 1rem;
+  }
+
+  .parent_reward_Box p {
+    font-size: 0.9rem;
+  }
+  .btnBox {
+    width: 11rem;
+    height: 2.2rem;
+  }
+  .btnBox :nth-child(1) {
+    padding: 0.1rem;
+  }
+}
+@media only screen and (min-width: 808px) and (max-width: 900px) {
+  .parent_reward_Box {
+    padding: 0.9rem;
+    width: 12rem;
+  }
+  .parent_reward_Box h2 {
+    font-size: 1rem;
+  }
+
+  .parent_reward_Box p {
+    font-size: 0.9rem;
+  }
+  .btnBox {
+    width: 12rem;
+    height: 2.2rem;
+  }
+  .btnBox :nth-child(1) {
+    padding: 0.2rem;
+  }
+}
+@media only screen and (min-width: 900px) and (max-width: 992px) {
+  .parent_reward_Box {
+    padding: 1rem;
+    width: 12rem;
+  }
+  .parent_reward_Box h2 {
+    font-size: 1rem;
+  }
+
+  .parent_reward_Box p {
+    font-size: 0.9rem;
+  }
+  .btnBox {
+    width: 12rem;
+    height: 2.2rem;
+  }
+  .btnBox :nth-child(1) {
+    padding: 0.2rem;
+  }
+  .rewardsBox {
+    width: 77vw;
+    padding: 0.5rem;
+    padding-top: 1rem;
+    column-gap: 0.5rem;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+  .rewardsBox {
+    width: 70vw;
+  }
+  .parent_reward_Box {
+    padding: 1rem;
+    width: 12rem;
+  }
+  .parent_reward_Box h2 {
+    font-size: 1rem;
+  }
+  .parent_reward_Box p {
+    font-size: 0.9rem;
   }
 }
