--- a/src/index.css
+++ b/src/index.css
@@ -89,6 +89,14 @@ body::-webkit-scrollbar-thumb {
 }
 @media only screen and (min-width: 768px) and (max-width: 992px) {
   body {
+    padding: 0% 5%;
+  }
+  body::-webkit-scrollbar {
+    width: 0rem;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+  body {
     padding: 0% 10%;
   }
   body::-webkit-scrollbar {
