--- a/src/index.css
+++ b/src/index.css
@@ -103,6 +103,14 @@ body::-webkit-scrollbar-thumb {
     width: 0rem;
   }
 }
+@media only screen and (min-width: 1200px) and (max-width: 1400px) {
+  body {
+    padding: 0% 10%;
+  }
+  body::-webkit-scrollbar {
+    width: 0rem;
+  }
+}
 /* 1DB954 - spotify green */
 /* 191414 - spotify black  */
 /* FFFFFF - spotify white  */
