--- a/src/Components/AdditionalComponents/ListContainer.module.css
+++ b/src/Components/AdditionalComponents/ListContainer.module.css
@@ -149,3 +149,30 @@
     margin-top: 2rem;
   }
 }
+@media only screen and (min-width: 720px) and (max-width: 992px) {
+  .listBtn {
+    border-radius: 1.5rem;
+    padding: 0.4rem 0.6rem;
+    font-size: 0.7rem;
+  }
+  .listItem h4 {
+    margin: 0;
+    font-size: 0.8rem;
+    margin-top: 0.2rem;
+  }
+  .subTitle_one,
+  .subTitle_two {
+    font-size: 0.8rem;
+  }
+
+  .subTitle_two {
+    font-size: 0.7rem;
+  }
+  .listItem h3 {
+    margin: 0;
+    font-size: 0.8rem;
+  }
+  .listBox {
+    margin-top: 2rem;
+  }
+}
